# budget-buddy

./: Cargo.toml  README.md  budget_buddy.js  budget_buddy_bg.wasm  index.html  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  pages.yml  rust.yml
dist-isolation/: index.js
main/: Cargo.toml  index.html
main/assets/: sw.js
main/src/: lib.rs  main.rs
src/: app.css  app.html  app.rs  global.scss  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: application.rs  domain.rs  lib.rs  main.rs  operations.rs  shared.rs
src-tauri/src/application/: errors.rs
src-tauri/src/domain/: array.rs  expense.rs  income.rs  operations.rs  traits.rs  value_objects.rs
src-tauri/src/queries/: domain.rs
src-tauri/src/shared/: adapters.rs  errors.rs  value_objects.rs
src/components/: Balance.svelte  FinancialEntity.svelte  Header.svelte  Operations.svelte
src/components/forms/: OperationInput.svelte
src/components/operations/: AsyncOperationList.svelte  Expenses.svelte  Incomes.svelte  Operation.svelte  OperationList.svelte  Operations.svelte  operations.scss
src/components/ui/: Separator.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
ui/: Cargo.toml
ui/src/: app.rs  components.rs  home.rs  lib.rs  login_view.rs  logout_view.rs  top_bar.rs  views.rs
ui/src/app/: top_bar.rs
ui/src/components/: avatar.rs  login_btn.rs
ui/src/views/: home.rs  login.rs
ui/src/views/home/: container.rs
ui/src/views/home/container/: balance.rs  cell.rs  expenses.rs  incomes.rs
ui/src/views/login/: avatar.rs
(+87 files in other folders)
